CU 04/05/15
Se agregaron funcionalidades para los respectivos casos, entidades faltante y lógica. Se modifico Habitación para ser abstracta y sus relaciones